--- a/spinn-airdop.html
+++ b/spinn-airdop.html
@@ -10,7 +10,7 @@
 <p>Simple open-source UI for using bitcoinjs-message to sign messages with a private key.</p>
 <h2 style="color: red;">THIS TOOL IS FOR OFFLINE USE ONLY!</h2>
 <h3>NEVER ENTER YOUR PRIVATE KEY INTO AN ONLINE MACHINE!</h3>
-<label for="u1">Address Type: </label><select style="width: 98%; padding: 7px; font-size: 18px;" id="u1"><option>SELECT</option><option value="p2pkh">P2PKH (Starts with 1)</option><option value="p2shp2wpkh">P2SH-P2WPKH (Starts with 3)</option><option value="p2wkh">P2WPKH (Starts with bc)</option></select>
+<label for="u1">Address Type: </label><select style="width: 98%; padding: 7px; font-size: 18px;" id="u1"><option>SELECT</option><option value="p2pkh">P2PKH (Starts with 1)</option><option value="p2shp2wpkh">P2SH-P2WPKH (Starts with 3)</option><option value="p2wpkh">P2WPKH (Starts with bc)</option></select>
 <label for="u2">Message:</label><input type="text" name="u2" id="u2" style="width: 98%; padding: 7px; font-size: 18px;" placeholder="Example message: Confirming bitcointalk user YOUR_BTCTALK_USERNAME signing up for airdrop.">
 <label for="u3">WIF Private Key:</label><input type="password" name="u3" id="u3" style="width: 98%; padding: 7px; font-size: 18px;">
 <button style="margin: 5px; display: block; cursor: pointer; padding: 10px; font-size: 20px; background-color: #0275d8; color: #fff;" onclick="return execsignmsg();">Sign Message</button>
@@ -25,15 +25,13 @@ function execsignmsg(){
 	let outtxt = document.getElementById("o1");
 	outtxt.value = '';
 	outtxt.value += '----- BEGIN MESSAGE ----- \r\n';
-	outtxt.value += '\r\n';
 	outtxt.value += usrmsg + '\r\n';
-	outtxt.value += '\r\n';
 	outtxt.value += '----- END MESSAGE ----- \r\n';
 	outtxt.value += '----- BEGIN SIGNATURE ----- \r\n';
-	outtxt.value += '\r\n';
-	outtxt.value += usrsig + '\r\n';
-	outtxt.value += '\r\n';
+	outtxt.value += usrsig.sig + '\r\n';
 	outtxt.value += '----- END SIGNATURE ----- \r\n';
+	outtxt.value += '----- BITCOIN ADDRESS ----- \r\n';
+	outtxt.value += usrsig.addrsout+'\r\n';
 }
 </script>
 </body>
